Code style and layout issues
- slightly change class naming (prefer BEM)
- add a 1200px wrapper to all sections
- trailing commas

--- a/assets/styles/_mixins.sass
+++ b/assets/styles/_mixins.sass
@@ -21,3 +21,4 @@
 
 @mixin maxWidth
   max-width: 1200px
+  margin: 0 auto
