--- a/assets/styles/styles.sass
+++ b/assets/styles/styles.sass
@@ -32,6 +32,9 @@ body
   font-weight: 100
   font-size: 14px
 
+main
+  padding-top: 60px
+
 h1, h2, h3
   font-weight: 100
   text-transform: capitalize
@@ -55,3 +58,6 @@ a, .green
 a
   text-decoration: none
   text-transform: uppercase
+
+.semibold
+  font-weight: 300
